# namo_cpp

./: .gitignore  1_push_solved.pkl  CLAUDE.md  CMakeLists.txt  DATA_COLLECTION_GUIDE.md  IDFS_DATA_PIPELINE.md  MCTS_DATA_PIPELINE.md  MCTS_TRAINING_DATA_STRUCTURE.md  MUJOCO_LOG.TXT  PROFILING.md  Q_FUNCTION_TRAINING_PLAN.md  README.md  analyze_wavefront.py  build_python_bindings.sh  build_python_mjxrl.sh  check_start_position.py  compare_implementations.py  debug_bounds.py  debug_extended  debug_primitives  debug_primitives_extended.cpp  debug_primitives_fixed  debug_robot_position.cpp  debug_test_bounds.py  debug_wavefront_issue.py  generate_fresh_masks.py  package-lock.json  plan_data.json  plot_motion_primitives.py  profile_analysis.sh  profile_iterative_mpc.sh  region_grid.txt  save_all_masks_with_rotation.py  test_benchmark_planner.cpp  test_bounds_padding.py  test_minimal_padding.py  test_refinement.py  test_region_heuristic.cpp
config/: benchmark_config.yaml  benchmark_test.yaml  headless_test.yaml  high_level_test.yaml  namo_config.yaml  namo_config_complete.yaml  namo_config_complete_skill15.yaml  namo_config_complete_skill3.yaml  simple_test.yaml  test_planning.yaml
data/: benchmark_env.xml  nominal_primitive_scene.xml  nominal_primitive_scene_square.xml  nominal_primitive_scene_tall.xml  nominal_primitive_scene_wide.xml  test_scene.xml
docs/: ARCHITECTURE.md  CONTEXT7_API_DOCUMENTATION.md  IMPLEMENTATION_STATUS.md  LEGACY_ANALYSIS.md  REGION_CONNECTIVITY_SNAPSHOT.md  REGION_PLANNER.md  SKILL_SYSTEM_SUMMARY.md  SKILL_USAGE_GUIDE.md
examples/: high_level_planning_demo.cpp  minimal_region_test.cpp  region_planning_demo.cpp  skill_demo.cpp
generated_templates/: maze_11x11_del50p_seed10874.xml  maze_11x11_del50p_seed11274.xml  maze_11x11_del50p_seed14844.xml  maze_11x11_del50p_seed16425.xml  maze_11x11_del50p_seed16783.xml  maze_11x11_del50p_seed18265.xml  maze_11x11_del50p_seed18710.xml  maze_11x11_del50p_seed19854.xml  maze_11x11_del50p_seed20601.xml  maze_11x11_del50p_seed21310.xml  maze_11x11_del50p_seed21371.xml  maze_11x11_del50p_seed21373.xml  maze_11x11_del50p_seed23378.xml  maze_11x11_del50p_seed25318.xml  maze_11x11_del50p_seed26059.xml  maze_11x11_del50p_seed28333.xml  maze_11x11_del50p_seed28557.xml  maze_11x11_del50p_seed28707.xml  maze_11x11_del50p_seed30318.xml  maze_11x11_del50p_seed31783.xml  maze_11x11_del50p_seed32166.xml  maze_11x11_del50p_seed32297.xml  maze_11x11_del50p_seed32662.xml  maze_11x11_del50p_seed3437.xml  maze_11x11_del50p_seed34477.xml  maze_11x11_del50p_seed35588.xml  maze_11x11_del50p_seed37322.xml  maze_11x11_del50p_seed38484.xml  maze_11x11_del50p_seed39712.xml  (+370 more)
python/: README.md  alphazero_data_collection.py  bindings.cpp  debug_ml_adapter.py  demo_failure_analysis.py  demo_visualization.py  environment_selection.py  mcts.py  mcts_clean_hierarchical.py  mcts_config.py  mcts_hierarchical.py  ml_image_converter_adapter.py  parallel_data_collection.py  pyproject.toml  rl_env.cpp  rl_env.hpp  rl_reachability_demo.py  run_mask_generation.py  run_mcts_mask_generation.py  setup.py  template_generation.py  template_generation_cli.md  test_clean_mcts.py  test_data_collection.py  test_epsilon_greedy.py  test_failure_classification.py  test_goal_extraction.py  test_ml_inference_unified.py  test_ml_vs_visualizer_comparison.py  test_ml_vs_visualizer_final.py  test_ml_vs_visualizer_fixed.py  test_multi_step_mcts.py  test_multihost.py  test_random_sampling_strategies.py  test_reachability.py  test_rl_env.py  test_unified_converter.py  test_xml_free_converter.py  visualize_environment.py  xml_goal_parser.py
python/idfs/: README.md  README_sequential_ml.md  __init__.py  goal_selection_strategy.py  ml_strategies.py  modular_parallel_collection.py  object_selection_strategy.py  optimal_idfs.py  parallel_sequential_runner.py  random_sampling.py  sequential_ml_collection.py  solution_smoother.py  standard_idfs.py  test_goal_proximity_strategy.py  test_ml_integration.py  test_ml_strategies.py  test_modular_integration.py  test_object_selection_strategies.py  test_tree_idfs.py  tree_idfs.py  visual_test_single.py
python/mask_generation/: README.md  batch_collection.py  visualizer.py
python/mask_generation/examples/: __init__.py  example_visualization.py
python/mcts_mask_generation/: __init__.py  mcts_visualizer.py
python/namo/: __init__.py
python/namo.egg-info/: PKG-INFO
python/namo/config/: __init__.py  mcts_config.py
python/namo/core/: __init__.py  base_planner.py  xml_goal_parser.py
python/namo/cpp_bindings/: bindings.cpp  rl_env.cpp  rl_env.hpp
python/namo/data_collection/: __init__.py  alphazero_data_collection.py  modular_parallel_collection.py  parallel_data_collection.py  region_opening_collection.yaml  region_opening_ml_collection.yaml  run_ml_collection_example.py  sequential_ml_collection.py
python/namo/planners/: __init__.py  connectivity_snapshot.py
python/namo/planners/idfs/: __init__.py  expanding_idfs.py  failure_codes.py  optimal_idfs.py  solution_refiner.py  solution_smoother.py  standard_idfs.py  tree_idfs.py
python/namo/planners/mcts/: __init__.py  hierarchical_mcts.py
python/namo/planners/opening/: __init__.py  region_opening.py
python/namo/planners/sampling/: __init__.py  random_sampling.py
python/namo/strategies/: __init__.py  goal_selection_strategy.py  ml_strategies.py  primitive_goal_strategy.py
python/namo/visualization/: __init__.py  ml_image_converter_adapter.py  namo_image_converter.py  unified_image_converter.py  visual_test_single.py  visual_test_single_ml.yaml  wavefront_snapshot.py  wavefront_viewer.py
python/namo/visualization/mask_generation/: __init__.py  batch_collection.py  visualizer.py
python/namo/visualization/mask_reversal/: README.md  __init__.py  mask_analyzer.py  npz_loader.py  reverse_masks.py  scene_reconstructor.py  test_roundtrip.py  xml_generator.py
python/namo/visualization/mcts_mask_generation/: batch_collection.py
python/scripts/: __init__.py  export_wavefront_snapshot.py  snapshot_connectivity_cli.py  visualize_wavefront_snapshot.py
src/: main.cpp
(+1624 files in other folders)
